Updated JDK and Locale handling in Unit Tests